cmake_minimum_required(VERSION 3.3)
project(AzequiaMPI_llvm)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    arch/include/arch.h
    arch/src/locks.c
    arch/src/read_barrier.c
    arch/src/write_barrier.c
    azqmpi/include/check.h
    azqmpi/include/common.h
    azqmpi/include/env.h
    azqmpi/include/errhnd.h
    azqmpi/include/hook.h
    azqmpi/include/lfs.h
    azqmpi/include/mpi.h
    azqmpi/include/mpif.h
    azqmpi/include/mpise_comm.h
    azqmpi/include/object.h
    azqmpi/include/p_collops.h
    azqmpi/include/p_comn.h
    azqmpi/include/p_config.h
    azqmpi/include/p_dtype.h
    azqmpi/include/p_errhnd.h
    azqmpi/include/p_group.h
    azqmpi/include/p_key.h
    azqmpi/include/p_rqst.h
    azqmpi/include/p_status.h
    azqmpi/include/simple-hash.h
    azqmpi/src/attr/mpi_attr_delete.c
    azqmpi/src/attr/mpi_attr_get.c
    azqmpi/src/attr/mpi_attr_put.c
    azqmpi/src/attr/mpi_keyval_create.c
    azqmpi/src/attr/mpi_keyval_free.c
    azqmpi/src/bindings/f77/f_abort.c
    azqmpi/src/bindings/f77/f_allreduce.c
    azqmpi/src/bindings/f77/f_alltoall.c
    azqmpi/src/bindings/f77/f_alltoall_v.c
    azqmpi/src/bindings/f77/f_barrier.c
    azqmpi/src/bindings/f77/f_bcast.c
    azqmpi/src/bindings/f77/f_comm_dup.c
    azqmpi/src/bindings/f77/f_comm_free.c
    azqmpi/src/bindings/f77/f_comm_rank.c
    azqmpi/src/bindings/f77/f_comm_size.c
    azqmpi/src/bindings/f77/f_comm_split.c
    azqmpi/src/bindings/f77/f_finalize.c
    azqmpi/src/bindings/f77/f_init.c
    azqmpi/src/bindings/f77/f_irecv.c
    azqmpi/src/bindings/f77/f_isend.c
    azqmpi/src/bindings/f77/f_proto.h
    azqmpi/src/bindings/f77/f_recv.c
    azqmpi/src/bindings/f77/f_reduce.c
    azqmpi/src/bindings/f77/f_send.c
    azqmpi/src/bindings/f77/f_type_size.c
    azqmpi/src/bindings/f77/f_util.c
    azqmpi/src/bindings/f77/f_util.h
    azqmpi/src/bindings/f77/f_wait.c
    azqmpi/src/bindings/f77/f_waitall.c
    azqmpi/src/bindings/f77/f_wtick.c
    azqmpi/src/bindings/f77/f_wtime.c
    azqmpi/src/coll/mpi_alltoall.c
    azqmpi/src/coll/mpi_alltoallv.c
    azqmpi/src/coll/mpi_barrier.c
    azqmpi/src/coll/mpi_bcast.c
    azqmpi/src/coll/mpi_bcast_prueba.c
    azqmpi/src/coll/mpi_gather.c
    azqmpi/src/coll/mpi_gather_all.c
    azqmpi/src/coll/mpi_gather_allv.c
    azqmpi/src/coll/mpi_gather_prueba.c
    azqmpi/src/coll/mpi_gather_v.c
    azqmpi/src/coll/mpi_op_create.c
    azqmpi/src/coll/mpi_op_free.c
    azqmpi/src/coll/mpi_reduce.c
    azqmpi/src/coll/mpi_reduce_all.c
    azqmpi/src/coll/mpi_reduce_scatter.c
    azqmpi/src/coll/mpi_scan.c
    azqmpi/src/coll/mpi_scatter.c
    azqmpi/src/coll/mpi_scatter_v.c
    azqmpi/src/comn/mpi_common_comn.c
    azqmpi/src/comn/mpi_comn_compare.c
    azqmpi/src/comn/mpi_comn_create.c
    azqmpi/src/comn/mpi_comn_dup.c
    azqmpi/src/comn/mpi_comn_free.c
    azqmpi/src/comn/mpi_comn_group.c
    azqmpi/src/comn/mpi_comn_rank.c
    azqmpi/src/comn/mpi_comn_size.c
    azqmpi/src/comn/mpi_comn_split.c
    azqmpi/src/comn/mpi_intercomn_create.c
    azqmpi/src/comn/mpi_intercomn_merge.c
    azqmpi/src/comn/mpi_intercomn_remote_group.c
    azqmpi/src/comn/mpi_intercomn_remote_size.c
    azqmpi/src/comn/mpi_intercomn_test.c
    azqmpi/src/dtype/mpi_dtype_address.c
    azqmpi/src/dtype/mpi_dtype_commit.c
    azqmpi/src/dtype/mpi_dtype_contiguous.c
    azqmpi/src/dtype/mpi_dtype_extent.c
    azqmpi/src/dtype/mpi_dtype_free.c
    azqmpi/src/dtype/mpi_dtype_hindexed.c
    azqmpi/src/dtype/mpi_dtype_hvector.c
    azqmpi/src/dtype/mpi_dtype_indexed.c
    azqmpi/src/dtype/mpi_dtype_lb.c
    azqmpi/src/dtype/mpi_dtype_size.c
    azqmpi/src/dtype/mpi_dtype_struct.c
    azqmpi/src/dtype/mpi_dtype_ub.c
    azqmpi/src/dtype/mpi_dtype_vector.c
    azqmpi/src/dtype/mpi_get_count.c
    azqmpi/src/dtype/mpi_get_elements.c
    azqmpi/src/dtype/mpi_pack.c
    azqmpi/src/dtype/mpi_pack_size.c
    azqmpi/src/dtype/mpi_unpack.c
    azqmpi/src/errhnd/mpi_errhnd_create.c
    azqmpi/src/errhnd/mpi_errhnd_free.c
    azqmpi/src/errhnd/mpi_errhnd_get.c
    azqmpi/src/errhnd/mpi_errhnd_set.c
    azqmpi/src/errhnd/mpi_error_class.c
    azqmpi/src/errhnd/mpi_error_string.c
    azqmpi/src/errhnd/mpi_fn_copy.c
    azqmpi/src/errhnd/mpi_fn_delete.c
    azqmpi/src/errhnd/mpi_fn_dup.c
    azqmpi/src/group/mpi_group_compare.c
    azqmpi/src/group/mpi_group_difference.c
    azqmpi/src/group/mpi_group_excl.c
    azqmpi/src/group/mpi_group_free.c
    azqmpi/src/group/mpi_group_incl.c
    azqmpi/src/group/mpi_group_intersection.c
    azqmpi/src/group/mpi_group_range_excl.c
    azqmpi/src/group/mpi_group_range_incl.c
    azqmpi/src/group/mpi_group_rank.c
    azqmpi/src/group/mpi_group_size.c
    azqmpi/src/group/mpi_group_translate_ranks.c
    azqmpi/src/group/mpi_group_union.c
    azqmpi/src/hook/hook.c
    azqmpi/src/hook/simple-hash.c
    azqmpi/src/misc/mpi_abort.c
    azqmpi/src/misc/mpi_common_init.c
    azqmpi/src/misc/mpi_finalize.c
    azqmpi/src/misc/mpi_get_version.c
    azqmpi/src/misc/mpi_init.c
    azqmpi/src/misc/mpi_init_thread.c
    azqmpi/src/misc/mpi_is_init.c
    azqmpi/src/misc/mpi_is_thread_main.c
    azqmpi/src/misc/mpi_pcontrol.c
    azqmpi/src/misc/mpi_proc_name.c
    azqmpi/src/misc/mpi_query_thread.c
    azqmpi/src/misc/mpi_wtick.c
    azqmpi/src/misc/mpi_wtime.c
    azqmpi/src/private/check.c
    azqmpi/src/private/env.c
    azqmpi/src/private/lfs.c
    azqmpi/src/private/main.c
    azqmpi/src/private/p_coll_band.c
    azqmpi/src/private/p_coll_bor.c
    azqmpi/src/private/p_coll_bxor.c
    azqmpi/src/private/p_coll_land.c
    azqmpi/src/private/p_coll_lor.c
    azqmpi/src/private/p_coll_lxor.c
    azqmpi/src/private/p_coll_max.c
    azqmpi/src/private/p_coll_maxloc.c
    azqmpi/src/private/p_coll_min.c
    azqmpi/src/private/p_coll_minloc.c
    azqmpi/src/private/p_coll_prod.c
    azqmpi/src/private/p_coll_sum.c
    azqmpi/src/private/p_collops.c
    azqmpi/src/private/p_comn.c
    azqmpi/src/private/p_dtype.c
    azqmpi/src/private/p_errhnd.c
    azqmpi/src/private/p_group.c
    azqmpi/src/private/p_key.c
    azqmpi/src/private/p_rqst.c
    azqmpi/src/private/p_status.c
    azqmpi/src/pt2pt/mpi_b_attach.c
    azqmpi/src/pt2pt/mpi_b_detach.c
    azqmpi/src/pt2pt/mpi_cancel.c
    azqmpi/src/pt2pt/mpi_probe.c
    azqmpi/src/pt2pt/mpi_probe_i.c
    azqmpi/src/pt2pt/mpi_recv.c
    azqmpi/src/pt2pt/mpi_recv_i.c
    azqmpi/src/pt2pt/mpi_recv_p.c
    azqmpi/src/pt2pt/mpi_rqst_free.c
    azqmpi/src/pt2pt/mpi_send.c
    azqmpi/src/pt2pt/mpi_send_b.c
    azqmpi/src/pt2pt/mpi_send_bi.c
    azqmpi/src/pt2pt/mpi_send_bp.c
    azqmpi/src/pt2pt/mpi_send_i.c
    azqmpi/src/pt2pt/mpi_send_p.c
    azqmpi/src/pt2pt/mpi_send_r.c
    azqmpi/src/pt2pt/mpi_send_ri.c
    azqmpi/src/pt2pt/mpi_send_rp.c
    azqmpi/src/pt2pt/mpi_send_s.c
    azqmpi/src/pt2pt/mpi_send_si.c
    azqmpi/src/pt2pt/mpi_send_sp.c
    azqmpi/src/pt2pt/mpi_sendrecv.c
    azqmpi/src/pt2pt/mpi_sendrecv_rpl.c
    azqmpi/src/pt2pt/mpi_start.c
    azqmpi/src/pt2pt/mpi_startall.c
    azqmpi/src/pt2pt/mpi_test.c
    azqmpi/src/pt2pt/mpi_test_cancel.c
    azqmpi/src/pt2pt/mpi_testall.c
    azqmpi/src/pt2pt/mpi_testany.c
    azqmpi/src/pt2pt/mpi_testsome.c
    azqmpi/src/pt2pt/mpi_wait.c
    azqmpi/src/pt2pt/mpi_waitall.c
    azqmpi/src/pt2pt/mpi_waitany.c
    azqmpi/src/pt2pt/mpi_waitsome.c
    azqmpi/src/topol/mpi_cart_coords.c
    azqmpi/src/topol/mpi_cart_create.c
    azqmpi/src/topol/mpi_cart_get.c
    azqmpi/src/topol/mpi_cart_map.c
    azqmpi/src/topol/mpi_cart_rank.c
    azqmpi/src/topol/mpi_cart_shift.c
    azqmpi/src/topol/mpi_cart_sub.c
    azqmpi/src/topol/mpi_cartdim_get.c
    azqmpi/src/topol/mpi_dims_create.c
    azqmpi/src/topol/mpi_graph_create.c
    azqmpi/src/topol/mpi_graph_get.c
    azqmpi/src/topol/mpi_graph_map.c
    azqmpi/src/topol/mpi_graph_neighbors.c
    azqmpi/src/topol/mpi_graph_neighbors_count.c
    azqmpi/src/topol/mpi_graphdims_get.c
    azqmpi/src/topol/mpi_topo_test.c
    bin/azqmpiexec.c
    config/config.h
    idsp/blk/impl/addr_hddn.h
    idsp/blk/impl/aprobe.c
    idsp/blk/impl/azq.c
    idsp/blk/impl/cancel.c
    idsp/blk/impl/com.c
    idsp/blk/impl/dlq.c
    idsp/blk/impl/grp.c
    idsp/blk/impl/grp_hddn.h
    idsp/blk/impl/grp_msg.h
    idsp/blk/impl/grp_sk.h
    idsp/blk/impl/grp_skeleton.c
    idsp/blk/impl/grp_stub.c
    idsp/blk/impl/mbx.c
    idsp/blk/impl/mbx.h
    idsp/blk/impl/opr.c
    idsp/blk/impl/pmp.c
    idsp/blk/impl/pmp.h
    idsp/blk/impl/pmp_cfg.h
    idsp/blk/impl/pmp_hddn.h
    idsp/blk/impl/pmp_msg.h
    idsp/blk/impl/pmp_sk.h
    idsp/blk/impl/pmp_skeleton.c
    idsp/blk/impl/pmp_stub.c
    idsp/blk/impl/probe.c
    idsp/blk/impl/prst.c
    idsp/blk/impl/r_async.c
    idsp/blk/impl/r_sync.c
    idsp/blk/impl/rpc.c
    idsp/blk/impl/rpc_hddn.h
    idsp/blk/impl/rpq.c
    idsp/blk/impl/rpq.h
    idsp/blk/impl/rqst.c
    idsp/blk/impl/s_async.c
    idsp/blk/impl/s_sync.c
    idsp/blk/impl/test.c
    idsp/blk/impl/testall.c
    idsp/blk/impl/testany.c
    idsp/blk/impl/testsome.c
    idsp/blk/impl/thr.c
    idsp/blk/impl/timer.c
    idsp/blk/impl/util.c
    idsp/blk/impl/wait.c
    idsp/blk/impl/waitall.c
    idsp/blk/impl/waitany.c
    idsp/blk/impl/waitsome.c
    idsp/blk/impl/xpn.h
    idsp/blk/spec/addr.h
    idsp/blk/spec/atomic.h
    idsp/blk/spec/azq.h
    idsp/blk/spec/azq_types.h
    idsp/blk/spec/com.h
    idsp/blk/spec/dlq.h
    idsp/blk/spec/grp.h
    idsp/blk/spec/opr.h
    idsp/blk/spec/rpc.h
    idsp/blk/spec/rqst.h
    idsp/blk/spec/thr.h
    idsp/blk/spec/thr_dptr.h
    idsp/blk/spec/timer.h
    idsp/blk/spec/util.h
    idsp/lfq/impl/addr_hddn.h
    idsp/lfq/impl/aprobe.c
    idsp/lfq/impl/azq.c
    idsp/lfq/impl/cancel.c
    idsp/lfq/impl/com.c
    idsp/lfq/impl/dlq.c
    idsp/lfq/impl/grp.c
    idsp/lfq/impl/grp_hddn.h
    idsp/lfq/impl/grp_msg.h
    idsp/lfq/impl/grp_sk.h
    idsp/lfq/impl/grp_skeleton.c
    idsp/lfq/impl/grp_stub.c
    idsp/lfq/impl/mbx.c
    idsp/lfq/impl/mbx_rpc.h
    idsp/lfq/impl/opr.c
    idsp/lfq/impl/pmp.c
    idsp/lfq/impl/pmp.h
    idsp/lfq/impl/pmp_cfg.h
    idsp/lfq/impl/pmp_hddn.h
    idsp/lfq/impl/pmp_msg.h
    idsp/lfq/impl/pmp_sk.h
    idsp/lfq/impl/pmp_skeleton.c
    idsp/lfq/impl/pmp_stub.c
    idsp/lfq/impl/probe.c
    idsp/lfq/impl/prst.c
    idsp/lfq/impl/r_async.c
    idsp/lfq/impl/r_sync.c
    idsp/lfq/impl/rpc.c
    idsp/lfq/impl/rpc_com.c
    idsp/lfq/impl/rpc_hddn.h
    idsp/lfq/impl/rpc_rqst.c
    idsp/lfq/impl/rpq.c
    idsp/lfq/impl/rqst.c
    idsp/lfq/impl/s_async.c
    idsp/lfq/impl/s_sync.c
    idsp/lfq/impl/stack.c
    idsp/lfq/impl/test.c
    idsp/lfq/impl/testall.c
    idsp/lfq/impl/testany.c
    idsp/lfq/impl/testsome.c
    idsp/lfq/impl/thr.c
    idsp/lfq/impl/timer.c
    idsp/lfq/impl/util.c
    idsp/lfq/impl/wait.c
    idsp/lfq/impl/wait_blk.c
    idsp/lfq/impl/waitall.c
    idsp/lfq/impl/waitany.c
    idsp/lfq/impl/waitsome.c
    idsp/lfq/impl/xpn.h
    idsp/lfq/spec/addr.h
    idsp/lfq/spec/atomic.h
    idsp/lfq/spec/azq.h
    idsp/lfq/spec/azq_types.h
    idsp/lfq/spec/com.h
    idsp/lfq/spec/dlq.h
    idsp/lfq/spec/dlq_rpc.h
    idsp/lfq/spec/fbox.h
    idsp/lfq/spec/grp.h
    idsp/lfq/spec/lfq.h
    idsp/lfq/spec/mbx.h
    idsp/lfq/spec/opr.h
    idsp/lfq/spec/rpc.h
    idsp/lfq/spec/rpq.h
    idsp/lfq/spec/rpq_rpc.h
    idsp/lfq/spec/rqst.h
    idsp/lfq/spec/rqst_rpc.h
    idsp/lfq/spec/stack.h
    idsp/lfq/spec/thr.h
    idsp/lfq/spec/thr_dptr.h
    idsp/lfq/spec/timer.h
    idsp/lfq/spec/util.h
    inet/none/impl/inet_none.c
    inet/none/spec/inet_none.h
    inet/OLD_tcpip/impl/elb.c
    inet/OLD_tcpip/impl/inet_tcp.c
    inet/OLD_tcpip/impl/routinginit.c
    inet/OLD_tcpip/spec/elb.h
    inet/OLD_tcpip/spec/inet_tcp.h
    inet/OLD_tcpip/spec/routinginit.h
    inet/tcpip/impl/elb.c
    inet/tcpip/impl/inet_tcp_v0.c
    inet/tcpip/impl/inet_tcp_v1.c
    inet/tcpip/impl/inet_tcp_v1_bueno.c
    inet/tcpip/impl/inet_tcp_v1_modificado.c
    inet/tcpip/impl/inet_tcp_v2.c
    inet/tcpip/impl/inet_tcp_v3.c
    inet/tcpip/impl/routinginit.c
    inet/tcpip/spec/elb.h
    inet/tcpip/spec/inet_tcp.h
    inet/tcpip/spec/routinginit.h
    inet/udpip/impl/inet_udp.c
    inet/udpip/impl/routinginit.c
    inet/udpip/spec/inet_udp.h
    inet/udpip/spec/routinginit.h
    inet/inet.h
    pmi/simple/defs.h
    pmi/simple/exit.c
    pmi/simple/mpibase.h
    pmi/simple/mpimem.h
    pmi/simple/msgprint.c
    pmi/simple/pmi.h
    pmi/simple/pmiconf.h
    pmi/simple/safestr.c
    pmi/simple/simple_pmi.c
    pmi/simple/simple_pmiutil.c
    pmi/simple/simple_pmiutil.h
    pmi/pmi_interface.c
    pmi/pmi_interface.h
    tests/azq/async/async.c
    tests/azq/async/async_2.c
    tests/azq/async/async_arecv.c
    tests/azq/async/async_fail.c
    tests/azq/async/async_perf.c
    tests/azq/async/main.c
    "tests/azq/basic/basic (copy).c"
    tests/azq/basic/basic.c
    tests/azq/basic/basic_1_thr.c
    tests/azq/basic/basic_any.c
    tests/azq/basic/basic_ok.c
    tests/azq/basic/basic_old.c
    tests/azq/basic/basic_prueba_090323.c
    tests/azq/basic/basic_recv_thr.c
    tests/azq/basic/basic_send_thr.c
    tests/azq/basic/basic_thr.c
    tests/azq/basic/basic_thr_1.c
    tests/azq/basic/basic_thrcreate.c
    tests/azq/basic/con.c
    tests/azq/basic/main.c
    tests/azq/cancel/latency.c
    tests/azq/cancel/main.c
    tests/azq/cpi/cpi.c
    tests/azq/cpi/cpi_sync.c
    tests/azq/cpi/main.c
    tests/azq/cpi/main_old.c
    tests/azq/cs/cs_operator.c
    tests/azq/cs/main.c
    tests/azq/echo/echo_msg.h
    tests/azq/echo/echoClient.c
    tests/azq/echo/echoServer.c
    tests/azq/echo/main.c
    tests/azq/integration/integration.c
    tests/azq/latency/latency.c
    tests/azq/latency/latency_arecv.c
    tests/azq/latency/latency_arecv_2.c
    tests/azq/latency/latency_arecv_3.c
    tests/azq/latency/latency_arecv_4.c
    tests/azq/latency/latency_asend_1.c
    tests/azq/latency/latency_asend_2.c
    tests/azq/latency/latency_asend_3.c
    tests/azq/latency/latency_asend_4.c
    tests/azq/latency/latency_asend_5.c
    tests/azq/latency/latency_operator.c
    tests/azq/latency/latency_perf.c
    tests/azq/latency/latency_radiator.c
    tests/azq/latency/latency_send_1.c
    tests/azq/latency/main.c
    tests/azq/latency/main_OLD.c
    tests/azq/matrix/c_args.h
    tests/azq/matrix/main.c
    tests/azq/matrix/matrix_master.c
    tests/azq/matrix/matrix_slave.c
    tests/azq/matrix/smt395cfg.h
    tests/azq/matrix/smt395cfg_c.c
    tests/azq/nc_adder/adder_no_chn_operator.c
    tests/azq/nc_adder/main.c
    tests/azq/perf/main.c
    tests/azq/perf/perf.c
    tests/azq/pi/main.c
    tests/azq/pi/pi_operator.c
    tests/azq/pingpong/asr_varios.c
    tests/azq/pingpong/main.c
    tests/azq/pingpong/sr.c
    tests/azq/pingpong/sr_alltoall.c
    tests/azq/pingpong/sr_pares.c
    tests/azq/pingpong/sr_pares_remote.c
    tests/azq/pingpong/sr_radiator.c
    tests/azq/pingpong/sr_radiator_remote.c
    tests/azq/pingpong/sr_todo.c
    tests/azq/prueba.1/main.c
    tests/azq/prueba.1/operator.c
    tests/azq/radiator/main.c
    tests/azq/radiator/radiator.c
    tests/azq/radiator/radiator_fixed.c
    tests/azq/slow_pi/main.c
    tests/azq/slow_pi/slow_pi_operator.c
    tests/azq/sr/asr_varios.c
    tests/azq/sr/main.c
    tests/azq/sr/sr.c
    tests/azq/sr/sr_alltoall.c
    tests/azq/sr/sr_pares.c
    tests/azq/sr/sr_pares_remote.c
    tests/azq/sr/sr_radiator.c
    tests/azq/sr/sr_radiator_remote.c
    tests/azq/sr/sr_todo.c
    tests/azq/timed/main.c
    tests/azq/timed/timed.c
    tests/azq/vec/c_args.h
    tests/azq/vec/main.c
    tests/azq/vec/res.c
    tests/azq/vec/smt395cfg_c.c
    tests/azq/vec/sum.c
    tests/azqmpi/allgather_1.c
    tests/azqmpi/allgatherv_1.c
    tests/azqmpi/allreduce_1.c
    tests/azqmpi/allreduce_2.c
    tests/azqmpi/alltoall_1.c
    tests/azqmpi/alltoall_2.c
    tests/azqmpi/alltoallv_1.c
    tests/azqmpi/attrs_1.c
    tests/azqmpi/attrs_2.c
    tests/azqmpi/barrier_1.c
    tests/azqmpi/barrier_2.c
    tests/azqmpi/basic.c
    tests/azqmpi/bcast_1.c
    tests/azqmpi/bcast_2.c
    tests/azqmpi/buff_0.c
    tests/azqmpi/buff_1.c
    tests/azqmpi/buff_2.c
    tests/azqmpi/buff_3.c
    tests/azqmpi/buff_4.c
    tests/azqmpi/cancel_1.c
    tests/azqmpi/cancel_2.c
    tests/azqmpi/cancel_3.c
    tests/azqmpi/cancel_4.c
    tests/azqmpi/cancel_5.c
    tests/azqmpi/collop_1.c
    tests/azqmpi/collop_2.c
    tests/azqmpi/collop_3.c
    tests/azqmpi/collop_4.c
    tests/azqmpi/collop_5.c
    tests/azqmpi/collop_6.c
    tests/azqmpi/collop_7.c
    tests/azqmpi/comm_1.c
    tests/azqmpi/comm_2.c
    tests/azqmpi/comm_3.c
    tests/azqmpi/comm_4.c
    tests/azqmpi/comm_5.c
    tests/azqmpi/comm_6.c
    tests/azqmpi/comm_7.c
    tests/azqmpi/comm_8.c
    tests/azqmpi/comm_9.c
    tests/azqmpi/dtype_1.c
    tests/azqmpi/dtype_10.c
    tests/azqmpi/dtype_10_sendrecv2.c
    tests/azqmpi/dtype_10_struct.c
    tests/azqmpi/dtype_10_vector.c
    tests/azqmpi/dtype_10_vector_non_contig.c
    tests/azqmpi/dtype_2.c
    tests/azqmpi/dtype_3.c
    tests/azqmpi/dtype_4.c
    tests/azqmpi/dtype_5.c
    tests/azqmpi/dtype_6.c
    tests/azqmpi/dtype_7.c
    tests/azqmpi/dtype_8.c
    tests/azqmpi/dtype_9.c
    tests/azqmpi/errhnd_1.c
    tests/azqmpi/errhnd_2.c
    tests/azqmpi/errhnd_3.c
    tests/azqmpi/gather_1.c
    tests/azqmpi/gatherv_1.c
    tests/azqmpi/group_1.c
    tests/azqmpi/group_2.c
    tests/azqmpi/group_3.c
    tests/azqmpi/group_4.c
    tests/azqmpi/group_5.c
    tests/azqmpi/intercomm_1.c
    tests/azqmpi/intercomm_2.c
    tests/azqmpi/intercomm_3.c
    tests/azqmpi/intercomm_4.c
    tests/azqmpi/iprobe_1.c
    tests/azqmpi/iprobe_2.c
    tests/azqmpi/issend_0.c
    tests/azqmpi/null_1.c
    tests/azqmpi/pack_1.c
    tests/azqmpi/pipo.h
    tests/azqmpi/popo.h
    tests/azqmpi/probe_0.c
    tests/azqmpi/probe_1.c
    tests/azqmpi/probe_2.c
    tests/azqmpi/profile_1.c
    tests/azqmpi/pt2pt_0.c
    tests/azqmpi/pt2pt_1.c
    tests/azqmpi/pt2pt_2.c
    tests/azqmpi/pt2pt_3.c
    tests/azqmpi/pt2pt_4.c
    tests/azqmpi/pt2pt_5.c
    tests/azqmpi/ptent_1.c
    tests/azqmpi/ptent_10.c
    tests/azqmpi/ptent_2.c
    tests/azqmpi/ptent_3.c
    tests/azqmpi/ptent_4.c
    tests/azqmpi/ptent_5.c
    tests/azqmpi/ptent_6.c
    tests/azqmpi/ptent_7.c
    tests/azqmpi/redscat_1.c
    tests/azqmpi/req_free_1.c
    tests/azqmpi/scan_1.c
    tests/azqmpi/scan_2.c
    tests/azqmpi/scatter_1.c
    tests/azqmpi/scatterv_1.c
    tests/azqmpi/self_1.c
    tests/azqmpi/sendrecv_1.c
    tests/azqmpi/sendrecv_2.c
    tests/azqmpi/size_1.c
    tests/azqmpi/struct_1.c
    tests/azqmpi/struct_2.c
    tests/azqmpi/struct_3.c
    tests/azqmpi/struct_4.c
    tests/azqmpi/struct_5.c
    tests/azqmpi/test_1.c
    tests/azqmpi/test_2.c
    tests/azqmpi/testall_1.c
    tests/azqmpi/testall_2.c
    tests/azqmpi/testany_1.c
    tests/azqmpi/testany_2.c
    tests/azqmpi/testsome_1.c
    tests/azqmpi/testsome_2.c
    tests/azqmpi/testsr.c
    tests/azqmpi/time.c
    tests/azqmpi/topol_1.c
    tests/azqmpi/topol_2.c
    tests/azqmpi/topol_3.c
    tests/azqmpi/topol_4.c
    tests/azqmpi/topol_5.c
    tests/azqmpi/topol_6.c
    tests/azqmpi/wait_1.c
    tests/azqmpi/wait_2.c
    tests/azqmpi/waitall_1.c
    tests/azqmpi/waitall_2.c
    tests/azqmpi/waitany_1.c
    tests/azqmpi/waitany_2.c
    tests/azqmpi/waitsome_1.c
    tests/azqmpi/waitsome_4.c
    tests/azqmpi/waitsome_5.c
    tests/beijing_dec/any_src-can-deadlock10.c
    tests/beijing_dec/any_src-can-deadlock11.c
    tests/beijing_dec/any_src-can-deadlock2.c
    tests/beijing_dec/any_src_can-deadlock6.c
    tests/beijing_dec/ppt_example.c
    tests/beijing_dec/wait-deadlock.c
    tests/beijing_dec/waitany-deadlock.c
    tests/fxjtest/any_src-can-deadlock10.c
    tests/fxjtest/crooked_barrier.c
    tests/fxjtest/crooked_barrier2.c
    tests/fxjtest/h2h.c
    tests/fxjtest/heat-errors.c
    tests/fxjtest/heat.h
    tests/fxjtest/hello.c
    tests/fxjtest/hengbiao.c
    tests/fxjtest/test_type_create.c
    tests/fxjtest/testbug.c
    tests/fxjtest/testfree.c
    tests/fxjtest/testisend.c
    tests/fxjtest/testisend2.c
    tests/fxjtest/testisend3.c
    tests/fxjtest/testMem.c
    tests/fxjtest/testwait.c
    tests/MPISE_PLUSE/change-send-buffer.c
    tests/MPISE_PLUSE/irecv-isend-ok.c
    tests/MPISE_PLUSE/no-error-vector-isend.c
    tests/MPISE_PLUSE/no-error-wait.c
    tests/testjingde/1/src/1.c
    tests/testjingde/2/src/2.c)

add_executable(AzequiaMPI_llvm ${SOURCE_FILES})